tests/syntax_errors/missing_semicolon.draw
LINE(50, 50, 300, 100) COLOR red WIDTH 2
RECT(100, 140, 220, 90) COLOR blue WIDTH 3 FILL yellow;
